@@ -8,6 +8,8 @@
    (joeribekker, #2360)
  - Add ``operation_timeout`` kwarg to the Transport class to set timeouts for
    operations. The default is still no timeout (#140)
+ - Introduce client.options context manager to temporarily override various
+   options (only timeout for now) (#140)
 
 
 0.20.0 (2016-10-24)
